test/sema/typeck/enum/match-with-parens.out
error: pattern should be used without parens.
--> match-with-parens.dora:4:9
 | fn f(x: A): Int32 {
 |     match x {
 |         A::V1() => 0i32,
           ~~~~~~~
 |         A::V2 => 1i32
 |     }
1 error found.
